--- a/src/_posts/being-a-leader.mdx
+++ b/src/_posts/being-a-leader.mdx
@@ -9,4 +9,4 @@ author:
 
 Maybe it’s just me but during my career, I had leaders who weren’t supposed to be one. Checking whether somebody was working or not, micromanaging everything, and in general lack of trust happened quite often. These things have a terrible effect on people who experience it. Instead of focusing on doing the best possible work people start questioning themselves. Maybe I’m not good enough? Did I do something wrong? Maybe I don’t fit in this team? Maybe I don’t fit in this company? Work is not exciting anymore. In that kind of environment, it’s hard to learn, hard to try new things, and hard to grow. Those things are the heart of innovation which fades away almost instantly when they happen.
 
-When you lead the team, let people do their best job. Let them do mistakes. Make sure they are not afraid to ask questions. Lead by example, not by saying that you are a leader. Help them when they are stuck. Share your experience but never assume you are always right. People with less experience may have better ideas, hear them, and make sure to follow the best path, no the one that’s yours. Being wrong does not make you a worse leader. Thinking that you are always right does. And let the results speak for their work. And don’t be late, it’s fucking annoying.
+When you lead the team, let people do their best job. Let them do mistakes. Make sure they are not afraid to ask questions. Lead by example, not by saying that you are a leader. Help them when they are stuck. Share your experience but never assume you are always right. People with less experience may have better ideas, hear them, and make sure to follow the best path, not the one that’s yours. Being wrong does not make you a worse leader. Thinking that you are always right does. And let the results speak for their work. And don’t be late, it’s fucking annoying.
