Added tags, made blog api less awful, code cleanup

--- a/src/_posts/custom-hooks.mdx
+++ b/src/_posts/custom-hooks.mdx
@@ -1,5 +1,6 @@
 ---
 title: Creating custom React Hook - useMediaStream
+tags: ['react', 'javascript']
 date: "2019-07-15T23:46:37.121Z"
 description: Creating custom React Hook for getting media stream
 author:
