--- a/src/_posts/react-hooks-rules.mdx
+++ b/src/_posts/react-hooks-rules.mdx
@@ -1,5 +1,6 @@
 ---
 title: React Hooks - a few rules, common problems and how to solve them
+tags: ['react', 'javascript']
 date: "2019-08-07T23:46:37.121Z"
 description: I thought they were confusing, now I can't really work without them.
 author:
