--- a/src/_posts/tools.mdx
+++ b/src/_posts/tools.mdx
@@ -1,5 +1,6 @@
 ---
 title: Toolbox
+tags: ['software', 'tools', 'links']
 date: '2020-10-08T11:00:00Z'
 description: A list of websites / software / resources useful for starting projects
 author:
