--- a/src/_posts/being-a-leader.mdx
+++ b/src/_posts/being-a-leader.mdx
@@ -2,7 +2,7 @@
 title: The thing about how (not) to be a good leader
 tags: ['career', 'leadership']
 date: '2020-10-03T11:00:00Z'
-description: Which is why „Any man who must say 'I am the king' is no true king”
+description: Which is why any man who must say 'I am the king' is no true king
 author:
   name: Bartosz Jarocki
   picture: '/assets/blog/authors/bartosz.jpeg'
