Monito blog post fix

--- a/src/_posts/monito.mdx
+++ b/src/_posts/monito.mdx
@@ -35,7 +35,7 @@ I personally think there’s a bunch of features/improvements I feel could be he
 6. Figure out the best format of extracted logs to make them as readable as possible
 7. Add direct links to MDN docs for things like HTTP Statuses to make it easier to learn and grow
 
-What’s most important, I’d love to get your feedback. If you’re a software tester or a developer, let me know if anything could be simplified in your testing workflow. Write me an [email](mailto:bartosz.jarocki@icloud.com) me or [DM](https://twitter.com/messages/compose?recipient_id=512460212) me on Twitter. I use it in my daily work as a web developer. I find it more convenient to use than Dev Tools for most scenarios because you can see everything on a single page.
+What’s most important, I’d love to get your feedback. If you’re a software tester or a developer, let me know if anything could be simplified in your testing workflow. Write me an [email](mailto:bartosz.jarocki@icloud.com) or [DM](https://twitter.com/messages/compose?recipient_id=512460212) me on Twitter. I use it in my daily work as a web developer. I find it more convenient to use than Dev Tools for most scenarios because you can see everything on a single page.
 
 Before working on new features, I plan to do the following:
 1. Improve landing page to provide more information why someone would need this
