Blog post content fixes

--- a/src/_posts/monito-after-launch.mdx
+++ b/src/_posts/monito-after-launch.mdx
@@ -22,7 +22,7 @@ Generated logs archive currently also contains logs as static, styled HTML. It m
 
 ![Monito - static html](https://s3.eu-north-1.amazonaws.com/jarocki.me/blog/static-html.png "Monito")
 
-Screenshots and screen recordings are now also visible in logs. It's very easy to see how app looked like and when.
+Screenshots and screen recordings are now also visible in logs. It's straightforward to see how the tested application looked like at the exact moment.
 
 ![Monito - screen recordings in logs](https://s3.eu-north-1.amazonaws.com/jarocki.me/blog/screen-recording-logs.png "Monito")
 ![Monito - screenshots in logs](https://s3.eu-north-1.amazonaws.com/jarocki.me/blog/screenshot-logs.png "Monito")
