--- a/src/_posts/tools.mdx
+++ b/src/_posts/tools.mdx
@@ -12,65 +12,65 @@ Below you will find a list of resources related to learning / software developme
 
 ### Learning computer science / web technologies
 
+- https://theartofpostgresql.com - Mastering PostgreSQL
+- https://epicreact.dev - Mastering React
+- https://css-for-js.dev - Mastering CSS
 - https://online-learning.harvard.edu/catalog - Harvard online courses
-- https://kentcdodds.com/ - React/Testing
-- https://ui.dev/ - JS/React and more
-- https://egghead.io/ - JS/React and more
-- https://frontendmasters.com/ - Various JS stuff and more
+- https://kentcdodds.com - React/Testing
+- https://ui.dev - JS/React and more
+- https://egghead.io - JS/React and more
+- https://frontendmasters.com - Various JS stuff and more
 - https://courses.wesbos.com - React/GraphQL Fullstack
-- https://www.udemy.com/ - Various courses
-
-### Startup ideas
-
-- https://nugget.one
-- https://ideasai.net
+- https://www.udemy.com - Various courses
 
 ### Landing pages/tools
 
-- https://crisp.chat/ - website chat, free Intercom alternative
-- https://cruip.com/ - free landing page templates
-- https://metatags.io/ - metatags generator
-- https://www.launchaco.com/ - landing page generator
-- https://carrd.co/ - responsive one page sites
+- https://crisp.chat - website chat, free Intercom alternative
+- https://cruip.com - free landing page templates
+- https://metatags.io - metatags generator
+- https://www.launchaco.com - landing page generator
+- https://carrd.co - responsive one page sites
 
 ### Technologies
 
-- https://api.ai/ - Build delightful and natural conversational experiences
+- https://api.ai - Build delightful and natural conversational experiences
 - https://openai.com - Open AI APIs, GPT-3
 
 ### Deploying web applications
 
-- https://www.vercel.com/
-- https://www.render.com/
-- https://www.heroku.com/
-- https://www.netlify.com/
-- https://www.digitalocean.com/
+- https://www.vercel.com
+- https://www.render.com
+- https://www.heroku.com
+- https://www.netlify.com
+- https://www.digitalocean.com
 - https://aws.amazon.com
 - https://cloud.google.com
-- https://azure.microsoft.com/
+- https://azure.microsoft.com
+- https://fly.io
 
-### Developer tools
+### Developer/Testing tools
 
-- https://getcssscan.com/
+- https://getcssscan.com
+- https://getmonito.com
 
 ### Prototyping/Design
 
 - https://www.figma.com
 - https://www.sketch.com
 - https://zeplin.io
-- https://draftium.com/
-- https://overflow.io/
+- https://draftium.com
+- https://overflow.io
 
 ### Design Resources
 
-- https://refactoringui.com/book/
+- https://refactoringui.com/book
 - https://twitter.com/i/moments/880688233641848832
-- https://blush.design/
-- https://www.humaaans.com/
-- https://www.ikonate.com/
-- https://icons8.com/
-- https://css.gg/
-- https://akveo.github.io/eva-icons/
+- https://blush.design
+- https://www.humaaans.com
+- https://www.ikonate.com
+- https://icons8.com
+- https://css.gg
+- https://akveo.github.io/eva-icons
 - https://teenyicons.com
 - https://www.zwicon.com
 - https://basicons.xyz
@@ -79,9 +79,15 @@ Below you will find a list of resources related to learning / software developme
 - https://heroicons.dev
 - https://feathericons.com
 - https://iconic.app
-- https://material.io/
+- https://material.io
 - https://phosphoricons.com
-- https://illustrationkit.com/
+- https://illustrationkit.com
+
+### Fonts
+
+- https://fonts.adobe.com
+- https://fonts.google.com
+- https://www.myfonts.com
 
 ### Copy writing
 - https://snazzy.ai/
@@ -89,81 +95,81 @@ Below you will find a list of resources related to learning / software developme
 
 ### UI development
 
-- https://ant.design/
-- https://chakra-ui.com/
-- https://material-ui.com/
-- https://react.semantic-ui.com/
-- https://blueprintjs.com/
-- https://tailwindcss.com/
-- https://tailwindui.com/
-- https://headlessui.dev/
+- https://headlessui.dev
+- https://tailwindcss.com
+- https://tailwindui.com
+- https://radix-ui.com
+- https://chakra-ui.com
+- https://ant.design
+- https://material-ui.com
+- https://react.semantic-ui.com
+- https://blueprintjs.com
 
 ### Logo generation
 
-- https://myemblem.io/
+- https://myemblem.io
 - https://logolix.com
-- https://logo.shapefactory.co/
-- https://app.brandmark.io/v2/
-- https://hatchful.shopify.com/
+- https://logo.shapefactory.co
+- https://app.brandmark.io/v2
+- https://hatchful.shopify.com
 - https://app.logobly.com
 
 ### Colors
 
-- https://cssgradient.io/
-- https://colorwise.io/
-- https://flatuicolors.com/
-- https://mycolor.space/
+- https://cssgradient.io
+- https://colorwise.io
+- https://flatuicolors.com
+- https://mycolor.space
 
 ### JS Libraries / Frameworks
 
-- https://reactjs.org/
-- https://nextjs.org/
-- https://www.apollographql.com/
-- https://typeorm.io/
-- https://nodejs.org/
-- https://vuejs.org/
-- https://svelte.dev/
+- https://reactjs.org
+- https://nextjs.org
+- https://www.apollographql.com
+- https://typeorm.io
+- https://nodejs.org
+- https://vuejs.org
+- https://svelte.dev
 
 ### Native applications development
 
-- https://kotlinlang.org/lp/mobile/
-- https://developer.android.com/
-- https://developer.apple.com/
-- https://flutter.dev/
-- https://reactnative.dev/
+- https://kotlinlang.org/lp/mobile
+- https://developer.android.com
+- https://developer.apple.com
+- https://flutter.dev
+- https://reactnative.dev
 
 ### Naming / Domains
 
-- https://domainwheel.com/
-- https://namelix.com/
-- https://flamedomain.com/
-- https://indiebrands.io/
+- https://domainwheel.com
+- https://namelix.com
+- https://flamedomain.com
+- https://indiebrands.io
 - https://www.nameql.com
 
 ### Launch
 
-- https://www.aidem.network/
-- https://www.instaaa.com/
-- https://producthunt.com/
-
-### Fonts
-
-- https://fonts.adobe.com/
-- https://fonts.google.com/
-- https://www.myfonts.com/
+- https://www.aidem.network
+- https://www.instaaa.com
+- https://producthunt.com
 
 ### Marketing
 
-- https://stackingthebricks.com/
+- https://stackingthebricks.com
 
 ### Selling side projects
 
-- https://microacquire.com/
+- https://microacquire.com
 
 ### Security
 
-- https://scanrepeat.com/
+- https://scanrepeat.com
+
+### Startup ideas
+
+- https://nugget.one
+- https://ideasai.net
 
 ### Others
 
-- https://free-for.dev/ - list of free software for developers
+- https://free-for.dev - list of free software for developers
