--- a/src/data/blog/monito-after-launch.mdx
+++ b/src/data/blog/monito-after-launch.mdx
@@ -9,7 +9,7 @@ author:
 ---
 
 ![Monito - screenshot](https://s3.eu-north-1.amazonaws.com/jarocki.me/blog/open-graph.png "Monito")
-It’s been two weeks since I launched Monito on Product Hunt and Hacker News. Initially, the number blew my mind. On the first day, the Monito landing page had 3400 unique visitors, 180 trails started, and five sales. Now, after the dust has settled, it gets around 50 unique visitors and a few trails. You can find the numbers [here.](https://app.usefathom.com/share/bpgfpxiq/getmonito.com)
+It’s been two weeks since I launched Monito on Product Hunt and Hacker News. Initially, the number blew my mind. On the first day, the Monito landing page had 3400 unique visitors, 180 trails started, and five sales. Now, after the dust has settled, it gets around 50 unique visitors and a few trails.
 
 I consider it a success. Users who bought the extension are actively submitting feedback and using the product. I received excellent ideas for new features and improvements. What’s most important, I’m pretty sure right now the time I’ve spent on this isn’t wasted, and the idea is validated.
 
